# divergence

./: Cargo.toml  readme.md
crates/core/: Cargo.toml
crates/core/src/: distance.rs  lib.rs  quantization.rs  types.rs
crates/engine/src/: ada_ef.rs  aligned.rs  cache.rs  calibrate.rs  engine.rs  io.rs  lib.rs  perf.rs  search.rs
crates/engine/tests/: disk_search.rs
docs/: adjacency_pool_plan.md  arch_decisions.md  cache_research.md  diskann_comparison.md  heavy_edge_layout_report.md  inline_codes_proposal.md  inline_pq_design.md  int8_cosine_research.md  io_reduction_research.md  paper_distill_3.1.md  paper_distill_4.0.md  paper_distill_5.0.md  prefetch_design.md  profiling_research.md  saq_experiment_results.md  saq_impl_plan.md  topology_packing_experiment.md  topology_packing_plan.md  twpp_experiment.md
results/: diskann_vs_divergence_2026-03-08.tsv  diskann_vs_divergence_2026-03-09.tsv  exp_bench_ada_v0.1_2026-03-07.tsv  exp_bench_ada_v0.2_2026-03-07.tsv  exp_bench_ada_v0_2026-03-07.tsv  exp_bench_ef_sweep_2026-03-07.tsv  exp_bench_stable_2026-03-07.tsv  exp_bench_v3_2026-03-07.tsv  exp_bench_v3_v2_2026-03-07.tsv  exp_bench_v3_v3_2026-03-08.tsv  exp_bench_v3_v4_pin_2026-03-08.tsv  exp_page_trace_2026-03-07.tsv  exp_page_trace_v2_2026-03-07.tsv  exp_pq_gate_2026-03-07.tsv  exp_pq_gate_v2_2026-03-07.tsv  exp_saq_gating_2026-03-31.md
scripts/: convert_cohere.py  deploy_ec2.sh  diskann_cache_sweep.json  diskann_cohere100k.json  diskann_cohere100k_sweep.json  export_diskann_format.py  plot_diskann_vs_divergence.py  run_diskann.sh  run_divergence.sh  saq_eval.cpp
(+11 files in other folders)
